Se creo el titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Curso de GitHub</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Clases de GibHub desde cero</h1>
+    </div>
 </body>
 </html>
