Se agrego el titulo del contenido

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <div>
         <h1>Clases de GibHub desde cero</h1>
+        <div>
+            <h2>Temas del curso</h2>
+        </div>
     </div>
 </body>
 </html>
