--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <div>
             <h2>Temas del curso</h2>
         </div>
+        <div>
+            <ul>
+                <li>Subir Cambios</li>
+                <li>Bajar Cambios</li>
+                <li>Clonar Repositorios</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
