Se agrego la descripcion del primer tema

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         <div>
             <h2>Temas del curso</h2>
         </div>
+        <h3>Clase 1</h3>
         <div>
             <ul>
                 <li>Subir Cambios</li>
                 <li>Bajar Cambios</li>
                 <li>Clonar Repositorios</li>
             </ul>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nobis cupiditate odio dolor placeat non, officiis consequatur qui harum exercitationem soluta enim dolore! Nostrum, qui eum. Excepturi recusandae porro unde!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus enim libero eum ducimus, laudantium assumenda, veniam veritatis sed, odit aliquam amet? Modi beatae qui autem ad quidem corporis natus sequi.</p>
         </div>
     </div>
 </body>
