Se agrego la clase 2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             </ul>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nobis cupiditate odio dolor placeat non, officiis consequatur qui harum exercitationem soluta enim dolore! Nostrum, qui eum. Excepturi recusandae porro unde!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus enim libero eum ducimus, laudantium assumenda, veniam veritatis sed, odit aliquam amet? Modi beatae qui autem ad quidem corporis natus sequi.</p>
         </div>
+        <h3>Clase 2</h3>
+        <div>
+            <ul>
+                <li>Corregir errores en ramas</li>
+                <li>Fusionar ramas</li>
+                <li>Ramas en paralelo</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, vero aliquam? Iure autem corporis, dolore ipsam dignissimos iste tempore quo deleniti veniam vel perspiciatis eum exercitationem aspernatur animi sint consequatur?. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ex rem tempora. Veritatis est maxime accusantium ducimus officiis fuga dicta sint, tempore suscipit placeat sequi, autem molestiae, eum aliquid dolores?</p>
+        </div>
     </div>
 </body>
 </html>
