--- a/blog.html
+++ b/blog.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Contenido Principal del Blog</h1>
+    <div>
+        <h2>Encabezado del blog</h2>
+    </div>
+    <div>
+        <ul>
+            <li>React JS</li>
+            <li>Next JS</li>
+            <li>Gasby</li>
+        </ul>
+    </div>
 </body>
 </html>
